# PurrScript

./: .clang-format  .gitignore  Doxyfile  README.md  xmake.lua
PurrScript.API/: xmake.lua
PurrScript.Client/: xmake.lua
PurrScript.DLL/: xmake.lua
PurrScript.GUI/: pyproject.toml  resources.qrc
PurrScript.GUI/src/PurrScript/GUI/: AppWidget.py  Application.py  MainWindow.py  WebSocketThread.py  __main__.py  qrc_resources.py
PurrScript.Implementations/: xmake.lua
PurrScript.Lua/: xmake.lua
PurrScript.Packages.Console/: xmake.lua
PurrScript.Packages.Core/: xmake.lua
PurrScript.Packages.DllLoader/: xmake.lua
PurrScript.Packages.LibraryLoader/: xmake.lua
PurrScript.Packages.Reflection/: xmake.lua
PurrScript.REPL/: PurrScript.REPL.cpp  xmake.lua
PurrScript.Runtime/: xmake.lua
PurrScript.Server/: PurrScript.Server.cpp  xmake.lua
PurrScript.Server.API/: xmake.lua
PurrScript.Server.Exe/: PurrScript.Server copy.cpp.xxx  PurrScript.Server.cpp  xmake.lua
PurrScript.Specs/: BarSpec.cpp  FooSpec.cpp  LogCollector.h  PurrScript.Specs.cpp.xxx  SpecHelper.h  xmake.lua
PurrScript.Specs/Basics/: CollectPrintOutput.Spec.cpp
PurrScript.Specs/SpecHelpers/: InterceptLogs.h  PurrScriptEnvironment.h
PurrScript.Specs/Specs/: CollectPrintOutput.Spec.cpp  DLL_Loading.Spec.cpp  FunctionInvocation.Spec.cpp  Function_Invocation.Spec.cpp  Importing_Package_Components.Spec.cpp  Invoke_Global_Print_Function.Spec.cpp
PurrScript.Specs/Templates/: PurrScriptContext.Template.cpp
Resources/Shared Example Struct Implementations/: xmake.lua  (+2 more)
Specs/: xmake.lua
(+85 files in other folders)
